#226: Bugfix: make the detailed search drawer always position:fixed to prevent the search view jumping upon scrolling a bit

--- a/front-end/app/styles/_toolbar.scss
+++ b/front-end/app/styles/_toolbar.scss
@@ -25,12 +25,11 @@ $border-color: rgba(0,0,0,0.12);
 }
 
 .md-toolbar-filter {
-  max-height: 999px;
-  position: relative;
-  transition: max-height 0.35s ease;
   padding-top: 64px;
-  margin-bottom: -64px;
-  z-index: 2;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 10;
 
   @media (min-width: $layout-breakpoint-xs) {
     overflow: hidden;
@@ -148,14 +147,5 @@ md-slider.md-default-theme.md-min[md-discrete] .md-thumb:after, md-slider.md-min
 
   .suggestion-hidden {
     visibility: hidden;
-  }
-}
-
-.md-toolbar-filter {
-  &--fixed {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 10;
   }
 }
